# amplifier-bundle-lsp

./: README.md  bundle.yaml
agents/: code-navigator.md
behaviors/: lsp-core.yaml
context/: lsp-general.md
modules/tool-lsp/: pyproject.toml
modules/tool-lsp/amplifier_module_tool_lsp/: __init__.py  operations.py  proxy.py  server.py  tool.py
modules/tool-lsp/tests/: test_code_actions.py  test_description_context.py  test_diagnostics.py  test_inlay_hints.py  test_lifecycle_routing.py  test_operation_filtering.py  test_operations.py  test_proxy.py  test_proxy_bugs.py  test_proxy_queue.py  test_proxy_reconnect.py  test_proxy_server.py  test_rename.py  test_server.py  test_state_registry.py  test_tire_kicking_fixes.py  test_tool.py
tests/: test_deep_merge.py
